language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_variable_in_function.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn first(a: wibble, b: wobble) -> wibble {\n  a\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn first(a: wibble, b: wobble) -> wibble {
                ↑▔▔▔▔▔                        
  a
}


----- AFTER RENAME
-- app.gleam

pub fn first(a: value, b: wobble) -> value {
  a
}
