language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_variant_from_aliased_import_to_original_name.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport mod.{Constructor as C}\n\npub fn main() {\n  #(C(75), mod.Constructor(57))\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

pub type Wibble {
  Constructor(Int)
}

fn wibble() {
  Constructor(81)
}


-- app.gleam

import mod.{Constructor as C}
                           ↑ 

pub fn main() {
  #(C(75), mod.Constructor(57))
}


----- AFTER RENAME
-- mod.gleam

pub type Wibble {
  Constructor(Int)
}

fn wibble() {
  Constructor(81)
}


-- app.gleam

import mod.{Constructor}

pub fn main() {
  #(Constructor(75), mod.Constructor(57))
}
